fixed scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,17 +19,22 @@ html {
     box-sizing: border-box;
 }
 
-// ::-webkit-scrollbar-thumb {
-//     background: #ff4747;
-// }
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
 
-// ::-webkit-scrollbar-thumb:hover {
-//     background: #fa7902;
-// }
+::-webkit-scrollbar-thumb {
+    background: #ff4747;
+}
 
-// ::-webkit-scrollbar-track {
-//     background: #101826;
-// }
+::-webkit-scrollbar-thumb:hover {
+    background: #fa7902;
+}
+
+::-webkit-scrollbar-track {
+    background: #101826;
+}
 
 html,
 body {
